Fix: Atualizando regras e casos de uso de usuario e RefreshToken